--- a/app/globals.css
+++ b/app/globals.css
@@ -126,3 +126,14 @@
 * {
 	box-sizing: border-box;
 }
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+	}
+  body {
+    @apply bg-background text-foreground;
+	}
+}
